--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 body{
     font-family: "Poppins",sans-serif;
     color: var(--primary-text-color);
+    
 }
 p{
     font-family: "Roboto",sans-serif;
@@ -40,13 +41,14 @@ ul{
     overflow: hidden;
 }
 nav{
-    background-color: #f3faff;
+    /*background-color: #f3faff;*/
     box-shadow: 0 0 4px #bbd0e2;
     position: fixed;
     top: 0;
     z-index: 99;
     left: 0;
     right: 0;
+    background-color: #FBA1B7;
 }
 .main-nav{
     justify-content: space-between;
@@ -54,7 +56,7 @@ nav{
 
 }
 .company-logo img{
-    width: 120px;
+    width: 80px;
 }
 .nav-links ul{
     gap: 16px;
